--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Created by .ignore support plugin (hsz.mobi)
+# Intellij
+.idea
+mysite.iml
+
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +108,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
